5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1715_3036.log
== TEST (2019-05-02 16:38:26) 
-- CODE:
x=float(input("valor de x: "))

if(x<=-1 or x>=1):
	f=x
	print(round(f, 2)
elif(-1<x and x<0)or(0<x and x<1):
	f=x
	print(round(f, 2))			
elif(x==0):
	f=x
	print(round(f, 2))			
-- ERROR:
File "XXXX", line 6
    elif(-1<x and x<0)or(0<x and x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:40) 
-- CODE:
x=float(input("valor de x: "))

if(x<=-1 or x>=1):
	f=x
	print(round(f, 2)
elif(-1<x and x<0) or (0<x and x<1):
	f=x
	print(round(f, 2))			
elif(x==0):
	f=x
	print(round(f, 2))			
-- ERROR:
File "XXXX", line 6
    elif(-1<x and x<0) or (0<x and x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:53) 
-- CODE:
x=float(input("valor de x: "))

if(x<=-1 or x>=1):
	f=x
	print(round(f, 2)
elif((-1<x and x<0) or (0<x and x<1)):
	f=x
	print(round(f, 2))			
elif(x==0):
	f=x
	print(round(f, 2))			
-- ERROR:
File "XXXX", line 6
    elif((-1<x and x<0) or (0<x and x<1)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
